@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.ewm.dto.NewUserRequest;
 import ru.practicum.ewm.dto.UserDto;
+import ru.practicum.ewm.exception.ConditionsNotMetException;
 import ru.practicum.ewm.exception.ConflictException;
 import ru.practicum.ewm.exception.NotFoundException;
 import ru.practicum.ewm.mapper.UserMapper;
@@ -22,51 +23,24 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional
 public class UserServiceImpl implements UserService {
-
     private final UserRepository userRepository;
     private final UserMapper userMapper;
 
     @Override
     public UserDto registerUser(NewUserRequest userRequest) {
-        log.info("Registering new user: {}", userRequest.getEmail());
+        log.info("Registering new user with email: {}", userRequest.getEmail());
 
-        validateEmailFormat(userRequest.getEmail());
+        validateUserRegistration(userRequest);
 
-        String cleanedEmail = userRequest.getEmail().trim();
-
-        if (cleanedEmail.isEmpty()) {
-            throw new ConflictException("Email cannot be empty or consist only of spaces");
-        }
-
-        if (userRepository.existsByEmail(cleanedEmail)) {
-            throw new ConflictException("Email already registered");
+        if (userRepository.existsByEmail(userRequest.getEmail())) {
+            throw new ConflictException("Email must be unique");
         }
 
         User user = userMapper.toUserEntity(userRequest);
-        user.setEmail(cleanedEmail);
         User savedUser = userRepository.save(user);
 
         log.info("User registered successfully with ID: {}", savedUser.getId());
         return userMapper.toUserDto(savedUser);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<UserDto> retrieveUsers(List<Long> ids, int from, int size) {
-        log.info("Retrieving users with IDs: {}, from: {}, size: {}", ids, from, size);
-
-        Pageable pageable = PageRequest.of(from / size, size);
-
-        List<User> users;
-        if (ids == null || ids.isEmpty()) {
-            users = userRepository.findAll(pageable).getContent();
-        } else {
-            users = userRepository.findByIdIn(ids, pageable).getContent();
-        }
-
-        return users.stream()
-                .map(userMapper::toUserDto)
-                .collect(Collectors.toList());
     }
 
     @Override
@@ -78,47 +52,70 @@ public class UserServiceImpl implements UserService {
         }
 
         userRepository.deleteById(userId);
-        log.info("User with ID {} removed successfully", userId);
+        log.info("User with ID: {} removed successfully", userId);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<UserDto> retrieveUsers(List<Long> userIds, int from, int size) {
+        log.info("Retrieving users - IDs: {}, from: {}, size: {}", userIds, from, size);
+
+        Pageable pageable = PageRequest.of(from / size, size);
+
+        if (userIds == null || userIds.isEmpty()) {
+            return userRepository.findAll(pageable).stream()
+                    .map(userMapper::toUserDto)
+                    .collect(Collectors.toList());
+        } else {
+            return userRepository.findByIdIn(userIds).stream()
+                    .map(userMapper::toUserDto)
+                    .collect(Collectors.toList());
+        }
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public boolean userExists(Long userId) {
+        return userRepository.existsById(userId);
+    }
+
+    private void validateUserRegistration(NewUserRequest userRequest) {
+        validateEmailFormat(userRequest.getEmail());
+        validateName(userRequest.getName());
     }
 
     private void validateEmailFormat(String email) {
-        if (email == null || email.isBlank()) {
-            throw new ConflictException("Email cannot be empty");
+        if (email == null || email.trim().isEmpty()) {
+            throw new ConditionsNotMetException("Email cannot be empty");
         }
 
-        String cleanedEmail = email.trim();
-        if (cleanedEmail.isEmpty()) {
-            throw new ConflictException("Email cannot consist only of spaces");
+        int atIndex = email.indexOf('@');
+        if (atIndex == -1) {
+            throw new ConditionsNotMetException("Invalid email format");
         }
 
-        String[] parts = cleanedEmail.split("@");
-        if (parts.length != 2) {
-            throw new ConflictException("Invalid email format");
+        String localPart = email.substring(0, atIndex);
+        String domainPart = email.substring(atIndex + 1);
+
+        if (localPart.length() > 64) {
+            throw new ConditionsNotMetException("Email local part cannot exceed 64 characters");
         }
 
-        String localPart = parts[0];
-        String domain = parts[1];
-
-        if (localPart.isEmpty()) {
-            throw new ConflictException("Email local part cannot be empty");
-        }
-
-        if (domain.isEmpty() || !domain.contains(".")) {
-            throw new ConflictException("Invalid email domain");
-        }
-
-        if (cleanedEmail.contains(" ")) {
-            throw new ConflictException("Email cannot contain spaces");
-        }
-
-        String[] domainLabels = domain.split("\\.");
+        String[] domainLabels = domainPart.split("\\.");
         for (String label : domainLabels) {
-            if (label.isEmpty()) {
-                throw new ConflictException("Email domain label cannot be empty");
-            }
             if (label.length() > 63) {
-                throw new ConflictException("Email domain label cannot exceed 63 characters");
+                throw new ConditionsNotMetException("Email domain label cannot exceed 63 characters");
             }
+        }
+    }
+
+    private void validateName(String name) {
+        if (name == null || name.trim().isEmpty()) {
+            throw new ConditionsNotMetException("Name cannot be empty");
+        }
+
+        if (name.length() < 2 || name.length() > 250) {
+            throw new ConditionsNotMetException("Name must be between 2 and 250 characters");
         }
     }
 }
